--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>About Roblox </h1>
 <p><h4>Roblox is a fun game. It is a online game.The current logois different from last years.
     There are lots of players.</h4></p>
-<img src="roblox logo.PNG">
+<img src="pics/roblox logo.PNG">
 
 
  <h1>Money in Roblox and Gift cards</h1>
@@ -19,39 +19,43 @@
     and when you redeem it with codes, you get robux and items.
     Ex: $10 equals 800 robux.</h4></p>
 
-<img src="robux.jpg">
+<img src="pics/robux.jpg">
 <h1>Friends in Roblox</h1>
 <h4>You can play Roblox as multiplayer. This means that you can play with online people, friends, or family.
  The max friends you can have in one account is up to <u>200 friends</u>. Some people may hack it to have 200+ friends plus.
 </h4>
 
 
- <img src="69420.PNG">
+ <img src="pics/friendsinroblox.png">
 <h1>Hackers in Roblox</h1>
 <p>There are admins, owners, mods, players and even hackers. 
 Hackers are people who hack the game and do evil stuff. They do this by using exploits and cheats. 
 The best exploit for 2023 is called <u>Synapse X</u>.</p>
-<img src="hacker.jpg">
+<img src="pics/hacker.jpg">
 
-<img src=".png">
+<img src="pics/.png">
 
 <h1>History and Origin of Roblox</h1>
 <p><h4>Roblox was beta tested on 2004 by <u>David Baszucki</u>.
     It was officialy released on Augusts 27, 2006.
     This is the CEO of Roblox:</h4>
 </p>
-<img src="ceo of rbolx=.png">
+<img src="pics/ceo of roblox.png">
 <h1> First Account in roblox</h1>
 <p>The first Account in Roblox has the username of <u>Admin</u>
     He joined on June 30, 2004. He had an id of <b>1</b>. <i>Here is a image of his account.</i>
 </p>
-<img src="1_Admin.png">
+<img src="pics/1_Admin.png">
 
 <h1> Facts about Roblox</h1>
-<ul>-Did you know that CEO net worth is $4 billion plus.</ul>
-<ul>-The co founder of Roblox Erik cassel died due to cancer.</ul>
-
+<ul>
+  <li>David Baszucki is worth over $4 billion dollars.</li>
+  <li>The co founder Erik cassel died due to cancer.</li>
+</ul>
 <p> *All images taken from Google. Except for first one.</p>
+
+<a href="homepage.html">About me</a>
+<a href="bryan.html">How to make a healthy sandwich.</a>
 </body>
 </html>
 
